--- a/css/card-view.css
+++ b/css/card-view.css
@@ -1,6 +1,5 @@
 .box {
-    margin-top: 20%;
-    margin-bottom: 20%;
+    margin-top: 10%;
     border-radius: 20px;
-    border-color: white;
+    border-color: black;
 }
